# CareerEmuData-Dev

./: .gitignore  LICENSE  Makefile  README.md  convert.py  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
career_emulator_bdci26/: __init__.py
career_emulator_bdci26/dev/dataset/ending_score/: config.data
career_emulator_bdci26/dev/dataset/failure_conditions/: consecutive_bad_performance.data  consecutive_d_performance.data  dignity_crisis.data  health_zero.data  network_isolated.data  risk_burst.data  skill_obsolete.data  wealth_deficit.data
career_emulator_bdci26/dev/dataset/initialization_n_regular/: energy_event.data  half_year_talk.data  initialization.data  main_event.data
career_emulator_bdci26/dev/dataset/performance_score/: config.data
career_emulator_bdci26/dev/dataset/promotion/: config.data  event_level_change.data  levels.data
career_emulator_bdci26/dev/dataset/salary_conditions/: config.data  half_year_performance_bonus.data  monthly_base_salary.data
career_emulator_bdci26/dev/dataset/talk_mechanism/: config.data  narratives.data
failure_conditions/: dignity_crisis.data  network_isolated.data  risk_burst.data  skill_obsolete.data  wealth_deficit.data
initialization_n_regular/: energy_event.data  initialization.data  main_event.data
salary_conditions/: monthly_base_salary.data
